--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>João & Anna</title>
+  <title>Igor & Lohanne</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -21,7 +21,7 @@
     <header>
       <div class="avatar heart">❤️</div>
       <div class="title">
-        <h1>João & Anna</h1>
+        <h1>Igor & Lohanne</h1>
         <p>Desde <strong>25/01/2025</strong></p>
       </div>
     </header>
@@ -36,19 +36,14 @@
 
     <div class="content">
       <div class="carousel" id="carousel">
-        <img src="assets/cinema.jpg" class="active carousel-item" alt="Foto 1">
-        <img src="assets/outback.jpeg" class="carousel-item" alt="Foto 2">
-        <img src="assets/cinema2.jpeg" class="carousel-item" alt="Foto 3">
-        <img src="assets/reis_magos.jpeg" class="carousel-item" alt="Foto 4">
-        <img src="assets/reis_magos2.jpeg" class="carousel-item" alt="Foto 5">
-        <img src="assets/via_costeira.jpeg" class="carousel-item" alt="Foto 6">
-        <video src="assets/video1.mp4" muted loop class="carousel-item"></video>
-        <video src="assets/video2.mp4" muted loop class="carousel-item"></video>
+        <img src="assets/LoheEu2.jpg" class="active carousel-item" alt="Foto 2">
+        <img src="assets/LoheEu.jpg" class="carousel-item" alt="Foto 1">
+        <video src="#" muted loop class="carousel-item"></video>
       </div>
 
       <aside class="side">
         <div class="meta">Nossa playlist</div>
-        <iframe style="border-radius:8px" src="https://open.spotify.com/embed/playlist/7wHA3C9UknAFVdudqpZUSJ?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allow="encrypted-media; clipboard-write" loading="lazy"></iframe>
+        <iframe style="border-radius:8px" src="https://open.spotify.com/embed/playlist/4gDBlu7wYiJD0o1SCQNU7J?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allow="encrypted-media; clipboard-write" loading="lazy"></iframe>
       </aside>
     </div>
 
