--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <footer>
-      <div>💌 Mensagem: <em>Você é meu lugar favorito. Meu porto seguro.</em></div>
+      <div>💌 Mensagem: <em>Ao amor da minha vida e amor para minha vida</em></div>
       <div>Feito com amor ❤️</div>
     </footer>
   </div>
