--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 
     <div class="content">
       <div class="carousel" id="carousel">
-        <img src="assets/LoheEu2.jpg" class="active carousel-item" alt="Foto 2">
+        <img src="assets/LoheEu3.jpg" class="active carousel-item" alt="Foto 2">
         <img src="assets/LoheEu.jpg" class="carousel-item" alt="Foto 1">
+        <img src="assets/LoheEu2.jpg" class="carousel-item" alt="Foto 3">
       </div>
 
       <aside class="side">
